--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-three/drei": "^9.106.0",
     "@react-three/fiber": "^8.16.8",
+    "@react-three/rapier": "^1.3.1",
     "@types/three": "^0.165.0",
     "next": "14.2.4",
     "react": "^18",
